--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
   geodesy: ^0.10.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
